# discord-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  LICENSE.txt  README.md  TODO.md
.VSCodeCounter/2023-07-08_08-53-41/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
examples/client/: mod.rs
examples/webhook/: mod.rs
src/: lib.rs  main.rs  sample.rs  test.rs
src/builders/: mod.rs
src/builders/client/: mod.rs
src/builders/slash_command/: mod.rs
src/client/: enums.rs  mod.rs  types.rs
src/client/cache/: mod.rs  types.rs
src/client/user/: mod.rs  types.rs
src/embed/: mod.rs  types.rs
src/examples/client/: mod.rs
src/examples/webhook/: mod.rs
src/managers/: mod.rs
src/managers/cache/: mod.rs
src/managers/channel/: mod.rs  types.rs
src/managers/client/: mod.rs
src/managers/events/: mod.rs
src/managers/guild/: mod.rs  types.rs
src/structs/application/: types.rs
src/structs/application_command/: types.rs
src/structs/attachment/: types.rs
src/structs/channel/: deserializers.rs  enums.rs  impls.rs  mod.rs  types.rs
src/structs/client/: enums.rs  mod.rs  structs.rs
src/structs/embed/: mod.rs
src/structs/emoji/: types.rs
src/structs/guild/: deserializers.rs  enums.rs  mod.rs  types.rs
src/structs/locale/: mod.rs
src/structs/member/: enums.rs  mod.rs  types.rs
src/structs/message/: enums.rs  mod.rs  types.rs
src/structs/message_payload/: mod.rs  types.rs
src/structs/nonce/: mod.rs
src/structs/permissions/: enums.rs  mod.rs
src/structs/presence/: types.rs
src/structs/role/: types.rs
src/structs/snowflake/: mod.rs
src/structs/sticker/: types.rs
src/structs/sticker/reaction/: types.rs
src/structs/timestamp/: mod.rs
src/structs/user/: mod.rs  types.rs
src/structs/webhook/: mod.rs  types.rs
src/threader/: mod.rs
src/util/: mod.rs
src/util/env/: mod.rs
src/util/rest/: mod.rs
src/util/socket/: mod.rs
src/util/threadpool/: mod.rs
src/util/ws/: mod.rs
src/webhook/: errors.rs  mod.rs  types.rs
tests/: deserialize.rs  timestamp.rs
