[package]
name = "discord-rs"
description = "A rust library for interacting with the Discord API in a blazingly fast way"
version = "0.1.2"
authors = ["Brian T. <bptiburcio@gmail.com>"]

license = "MIT"
keywords = ["discord", "chat", "bot", "api", "voice"]
documentation = "https://docs.rs/discord-rs"

repository = "https://github.com/BrianTiburcio/discord-rs"
readme = "README.md"

edition = "2021"
rust-version = "1.70.0"

categories = ["api-bindings"]

include = [
    "**/*.rs",
    "Cargo.toml",
]
exclude = [
    ".ignore/*",
    "src/examples/*",
    "target/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
colored = "2.0.0"
dotenv = "0.15.0"
futures-util = "0.3.28"
native-tls = "0.2.11"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.14"
serde_with = "3.0.0"
tokio = { version = "1.28.2", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
tungstenite = { version = "0.19.0", features = ["native-tls"] }

[dev-dependencies]