[package]
name = "discord-rs"
description = "A rust library for interacting with the Discord API in a blazingly fast way"
version = "0.2.0"
authors = ["Brian T. <bptiburcio@gmail.com>"]

license = "MIT"
keywords = ["discord", "chat", "bot", "api", "voice"]
documentation = "https://docs.rs/discord-rs"

repository = "https://github.com/BrianTiburcio/discord-rs"
readme = "README.md"

edition = "2021"
rust-version = "1.74.0"

categories = ["api-bindings"]

include = [
    "**/*.rs",
    "Cargo.toml",
]

exclude = [
    ".ignore/*",
    "assets/*",
    "examples/*",
    "src/examples/*",
    "target/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
native-tls = "0.2.11"
chrono = "0.4.31"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
serde_with = "3.4.0"
tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.4.1"