[package]
name = "discord-rs"
version = "0.2.0"
description = "A rust library for interacting with the Discord API in a blazingly fast way"

authors = ["Brian T. <bptiburcio@gmail.com>"]
categories = ["api-bindings"]
documentation = "https://docs.rs/discord-rs"
keywords = ["discord", "chat", "bot", "api"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/BrianTib/discord-rs"

edition = "2021"
rust-version = "1.75.0"

include = [
    "**/*.rs",
    "Cargo.toml",
]

exclude = [
    ".ignore/*",
    "assets/*",
    "tests/*",
    "examples/*",
    "src/examples/*",
    "target/*"
]

[lib]
doctest = false

[features]
webhooks = []

[dependencies]
chrono = "0.4.33"
dotenv = "0.15.0"
native-tls = "0.2.11"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_repr = "0.1.18"
serde_with = "3.6.0"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"